--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -55,3 +55,13 @@
 	text-overflow: ellipsis;
 	word-break: break-all;
 }
+
+@mixin _fix {
+	&::after,
+	&::before {
+		content: '';
+		display: block;
+		clear: both;
+		visibility: hidden;
+	}
+}
