--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -1,5 +1,5 @@
 html {
-	font: 10px/1.15 'SF Pro SC', 'HanHei SC', 'SF Pro Text', 'Myriad Set Pro', 'SF Pro Icons',
+	font: 1vw/1.15 'SF Pro SC', 'HanHei SC', 'SF Pro Text', 'Myriad Set Pro', 'SF Pro Icons',
 		'PingFang SC', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
 body,
