--- a/src/assets/scss/iconfont.scss
+++ b/src/assets/scss/iconfont.scss
@@ -1,15 +1,23 @@
 @font-face {
 	font-family: 'iconfont'; /* Project id 2332256 */
-	src: url('//at.alicdn.com/t/font_2332256_2smxqrjv3s8.woff2?t=1621047445892') format('woff2'),
-		url('//at.alicdn.com/t/font_2332256_2smxqrjv3s8.woff?t=1621047445892') format('woff'),
-		url('//at.alicdn.com/t/font_2332256_2smxqrjv3s8.ttf?t=1621047445892') format('truetype');
+	src: url('//at.alicdn.com/t/font_2332256_v730w8v0w0m.woff2?t=1621055768428') format('woff2'),
+		url('//at.alicdn.com/t/font_2332256_v730w8v0w0m.woff?t=1621055768428') format('woff'),
+		url('//at.alicdn.com/t/font_2332256_v730w8v0w0m.ttf?t=1621055768428') format('truetype');
 }
+
 .iconfont {
 	font-family: 'iconfont' !important;
 	font-size: 16px;
 	font-style: normal;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon__succeed::before {
+	content: '\e61c';
+	color: #6bc839;
+	font-size: 18px;
+	margin-right: 15px;
 }
 
 .icon__inform::before {
