--- a/src/views/editor/editor.scss
+++ b/src/views/editor/editor.scss
@@ -57,4 +57,15 @@
 		user-select: none;
 		margin: 24px 0;
 	}
+
+	ul {
+		li::marker {
+			unicode-bidi: isolate;
+			font-variant-numeric: tabular-nums;
+			text-transform: none;
+			text-indent: 0px !important;
+			text-align: start !important;
+			text-align-last: start !important;
+		}
+	}
 }
