--- a/src/views/editor/editor.scss
+++ b/src/views/editor/editor.scss
@@ -1,72 +1,125 @@
 .view,
 .article {
+	word-break: break-word;
+	line-height: 1.75;
+	font-weight: 400;
+	font-size: 15px;
+	color: #333;
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		line-height: 1.5;
+		margin-top: 35px;
+		margin-bottom: 10px;
+		font-weight: 900;
+	}
 	h1 {
-		font-size: 28px;
-		line-height: 36px;
-		margin: 26px 0 10px 0;
+		font-size: 30px;
+		margin-bottom: 5px;
 	}
 	h2 {
+		padding-bottom: 12px;
 		font-size: 24px;
-		line-height: 32px;
-		margin: 21px 0 5px 0;
+		border-bottom: 1px solid #ececec;
 	}
 	h3 {
-		font-size: 20px;
-		line-height: 28px;
-		margin: 16px 0 5px 0;
+		font-size: 18px;
+		padding-bottom: 0;
+		display: block;
+		margin-block-start: 1em;
+		margin-block-end: 1em;
+		margin-inline-start: 0px;
+		margin-inline-end: 0px;
 	}
-	h4 {
-		font-size: 16px;
-		line-height: 24px;
-		margin: 10px 0 5px 0;
+	ol,
+	ul {
+		padding-left: 28px;
 	}
-	h5 {
+
+	ol {
+		display: block;
+		list-style-type: decimal;
+		margin-block-start: 1em;
+		margin-block-end: 1em;
+		margin-inline-start: 0px;
+		margin-inline-end: 0px;
+		padding-inline-start: 40px;
+	}
+	ul {
+		display: block;
+		list-style-type: disc;
+		margin-block-start: 1em;
+		margin-block-end: 1em;
+		margin-inline-start: 0px;
+		margin-inline-end: 0px;
+		padding-inline-start: 40px;
+	}
+
+	li {
+		display: list-item;
+		text-align: -webkit-match-parent;
 		font-size: 15px;
-		line-height: 24px;
-		margin: 8px 0 5px 0;
+		padding-left: 6px;
+		list-style-type: inherit;
 	}
-	h6 {
-		font-size: 15px;
-		line-height: 24px;
-		margin: 8px 0 5px 0;
+
+	::marker {
+		unicode-bidi: isolate;
+		font-variant-numeric: tabular-nums;
+		text-transform: none;
+		text-indent: 0px !important;
+		text-align: start !important;
+		text-align-last: start !important;
 	}
 
 	p {
-		line-height: 1.74;
-		font-size: 15px;
-		color: #404040;
-		letter-spacing: 0.008em;
+		line-height: inherit;
+		margin-top: 22px;
+		margin-bottom: 22px;
+		display: block;
+		margin-block-start: 1em;
+		margin-block-end: 1em;
+		margin-inline-start: 0px;
+		margin-inline-end: 0px;
 	}
-
-	pre,
-	code {
-		font-size: 16px;
-		font-family: Menlo, Monaco, Consolas, Courier New, monospace;
-		font-weight: 400;
-		margin: 24px 0;
+	pre {
 	}
-
-	img {
+	pre > code {
+		font-size: 12px;
+		padding: 15px 12px;
+		margin: 0;
+		word-break: normal;
+		display: block;
+		overflow: auto;
 		position: relative;
-		display: inline-block;
-		font-size: 14px;
-		text-align: left;
-		border-radius: 3px 3px;
-		line-height: 24px;
-		text-indent: 0;
-		-webkit-user-select: none;
-		user-select: none;
-		margin: 24px 0;
+		line-height: 1.75;
+		color: #333;
+		background: #f8f8f8;
+		::selection {
+			background-color: #328ffe;
+			color: #fff;
+		}
 	}
 
-	ul {
-		li::marker {
-			unicode-bidi: isolate;
-			font-variant-numeric: tabular-nums;
-			text-transform: none;
-			text-indent: 0px !important;
-			text-align: start !important;
-			text-align-last: start !important;
-		}
+	.hljs-comment,
+	.hljs-quote {
+		color: #998;
+		font-style: italic;
+	}
+	.hljs-attribute,
+	.hljs-name,
+	.hljs-tag {
+		color: navy;
+		font-weight: 400;
+	}
+	blockquote {
+		color: #666;
+		padding: 1px 23px;
+		margin: 22px 0;
+		border-left: 4px solid #cbcbcb;
+		background-color: #f8f8f8;
 	}
 }
