style:将图片上传封装成一个组件

--- a/src/views/editor/editor.scss
+++ b/src/views/editor/editor.scss
@@ -103,6 +103,12 @@
 		}
 	}
 
+	img {
+		border: 1px solid rgb(223, 223, 223);
+		display: block;
+		margin: 0 auto;
+	}
+
 	.hljs-comment,
 	.hljs-quote {
 		color: #998;
