--- a/ui/src/assets/style/reset.scss
+++ b/ui/src/assets/style/reset.scss
@@ -14,6 +14,13 @@ html {
 	height: 100%;
 	width: 100%;
 	box-sizing: border-box;
+	font-size: 10px;
+}
+
+@media screen and (max-width: 700px) {
+	html {
+		font-size: 5px;
+	}
 }
 
 /* Sections
