--- a/ui/src/components/content/TopBar/TopBar.scss
+++ b/ui/src/components/content/TopBar/TopBar.scss
@@ -6,22 +6,21 @@
 	justify-content: space-between;
 	align-items: center;
 }
-.left {
+.left-inner {
 	height: 100%;
 	display: flex;
 	align-items: center;
 
 	.logo {
-		width: 150px;
+		width: 80px;
 		height: 40px;
 		font-size: 0;
 		background: blue;
 		background-size: 50px 100px;
 	}
 }
-.mb-logo,
-.mb-left,
-.mb-right {
+
+.options {
 	display: none;
 }
 
@@ -52,8 +51,8 @@
 			background-color: blue;
 		}
 		.notice {
-			width: 20px;
-			height: 20px;
+			width: 24px;
+			height: 24px;
 			margin: 0 30px;
 			background-color: blue;
 		}
@@ -61,6 +60,61 @@
 			width: 42px;
 			height: 42px;
 			background-color: blue;
+		}
+	}
+}
+/* ------------------------- */
+@media screen and (max-width: 700px) {
+	.inner {
+		padding: 0 12px;
+	}
+
+	.left {
+		.input-slot {
+			display: none;
+		}
+
+		.logo {
+			height: 28px;
+		}
+	}
+
+	.right {
+		.log-in,
+		.write-button,
+		.profile {
+			display: none;
+		}
+		.option-button {
+			width: 24px;
+			height: 24px;
+			margin-left: -15px;
+			background: blue;
+		}
+	}
+
+	.options {
+		display: block;
+		display: none;
+		z-index: 40;
+		position: fixed;
+		top: 55px;
+		right: 0;
+		width: 200px;
+		height: 100%;
+		background: red;
+		.un-login {
+			.bar {
+				height: 30px;
+				background: blue;
+			}
+			.log-in {
+				height: 30px;
+				width: 50px;
+				background: blue;
+			}
+		}
+		.login {
 		}
 	}
 }
