--- a/ui/src/views/home/components/Main/MainProfile/MainProfile.scss
+++ b/ui/src/views/home/components/Main/MainProfile/MainProfile.scss
@@ -7,7 +7,7 @@
 }
 .cover {
 	width: 100%;
-	height: 240px;
+	height: 24rem;
 	background: yellow;
 }
 
@@ -18,8 +18,8 @@
 	display: flex;
 	align-items: flex-end;
 	.photo {
-		width: 160px;
-		height: 160px;
+		width: 16rem;
+		height: 16rem;
 		background: fuchsia;
 		position: relative;
 		top: -55px;
@@ -51,6 +51,9 @@
 		margin: 12px 0;
 		background-color: blue;
 	}
+	.mb {
+		display: none;
+	}
 	.more-button {
 		width: 120px;
 		height: 20px;
@@ -64,5 +67,42 @@
 		top: -35px;
 		background: fuchsia;
 		margin-right: 20px;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	.profile {
+		.info {
+			height: 95px;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			top: 0;
+			.other-info {
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				.more-button {
+				}
+			}
+			.mb {
+				display: block;
+				background-color: red;
+				top: 0;
+			}
+
+			.info-gender {
+				margin: 0;
+			}
+		}
+		.basic-info {
+			.info-name {
+				font-size: 16px;
+			}
+		}
+
+		.focus-me {
+			display: none;
+		}
 	}
 }
