feature[ui]:add home page

--- a/ui/src/assets/style/iconfont.scss
+++ b/ui/src/assets/style/iconfont.scss
@@ -1,11 +1,11 @@
 @font-face {
 	font-family: 'iconfont'; /* Project id 2332256 */
-	src: url('//at.alicdn.com/t/font_2332256_igike3p68qr.woff2?t=1622859865897') format('woff2'),
-		url('//at.alicdn.com/t/font_2332256_igike3p68qr.woff?t=1622859865897') format('woff'),
-		url('//at.alicdn.com/t/font_2332256_igike3p68qr.ttf?t=1622859865897') format('truetype');
+	src: url('//at.alicdn.com/t/font_2332256_12nn4208xv8.woff2?t=1625237268097') format('woff2'),
+		url('//at.alicdn.com/t/font_2332256_12nn4208xv8.woff?t=1625237268097') format('woff'),
+		url('//at.alicdn.com/t/font_2332256_12nn4208xv8.ttf?t=1625237268097') format('truetype');
 }
 .iconfont {
-	font-family: 'iconfont' !important;
+	font-family: 'iconfont';
 	font-size: 16px;
 	font-style: normal;
 	-webkit-font-smoothing: antialiased;
