--- a/ui/src/assets/style/theme.scss
+++ b/ui/src/assets/style/theme.scss
@@ -1,5 +1,5 @@
 /* 主题 */
-$theme-color: #fff;
-$border-color: #e8e8e8;
+$theme-color: #0071c5;
+$border-color: #e6e6e6;
 $background: #fafafa;
 $top-bar-color: #fff;
