--- a/ui/src/assets/style/iconfont.scss
+++ b/ui/src/assets/style/iconfont.scss
@@ -31,7 +31,6 @@
 
 .icon__add:before {
 	content: '\e612';
-	margin-right: 5px;
 }
 
 .icon__setting:before {
@@ -143,78 +142,98 @@
 }
 /* logo */
 .icon__qq:before {
+	display: block;
+	font-family: iconfont;
 	content: '\e65c';
-	margin-right: 5px;
-	font-size: 30px;
+	font-size: 28px;
 	color: #32a6d4;
 }
 
 .icon__douyin:before {
+	display: block;
+	font-family: iconfont;
 	content: '\e601';
-	margin-right: 5px;
-	font-size: 30px;
+	font-size: 28px;
 	color: #1c0b1b;
 }
 
 .icon__weibo:before {
+	display: block;
+	font-family: iconfont;
 	content: '\ea89';
-	margin-right: 5px;
-	font-size: 30px;
+	font-size: 28px;
 	color: #e22c1f;
 }
 
 .icon__twitter:before {
+	display: block;
+	font-family: iconfont;
 	content: '\e72e';
-	margin-right: 5px;
-	font-size: 30px;
+	font-size: 28px;
 	color: #1da1f2;
 }
 
 .icon__xiaohongshu:before {
+	display: block;
+	font-family: iconfont;
 	content: '\e66d';
-	margin-right: 5px;
-	font-size: 30px;
+	font-size: 28px;
 	color: #ff2840;
 }
 
 .icon__facebook:before {
+	display: block;
+	font-family: iconfont;
 	content: '\e608';
-	margin-right: 5px;
-	font-size: 30px;
+	font-size: 28px;
 	color: #1278f3;
 }
 
 .icon__bilibili:before {
+	display: block;
+	font-family: iconfont;
 	content: '\e627';
-	margin-right: 5px;
-	font-size: 30px;
+	font-size: 28px;
 	color: #fb7299;
 }
 
 .icon__wechat:before {
+	display: block;
+	font-family: iconfont;
 	content: '\e65b';
-	margin-right: 5px;
-	font-size: 16px;
+	font-size: 28px;
 	color: #1ac064;
 }
 
 .icon__csdn:before {
+	display: block;
+	font-family: iconfont;
 	content: '\e638';
-	margin-right: 5px;
-	font-size: 16px;
+	font-size: 28px;
 	color: #ff4d4d;
 }
 
 .icon__github:before {
+	display: block;
+	font-family: iconfont;
 	content: '\e600';
-	margin-right: 5px;
-	font-size: 16px;
-	color: #181617;
+	font-size: 28px;
+	$color: #181617;
+	color: $color;
+	background: transparentize($color, 0.85);
+	box-shadow: 0 0 1px 0 transparentize($color, 0.85);
 }
 
 .icon__zhihu:before {
+	display: block;
+	font-family: iconfont;
 	content: '\e629';
-	margin-right: 5px;
-	font-size: 16px;
+	font-size: 28px;
 	color: #0084ff;
+	background: transparentize($color, 0.85);
+	box-shadow: 0 0 1px 0 transparentize($color, 0.85);
+}
+
+@function getIconBackGroundColor() {
+	@return 1;
 }
