--- a/ui/src/views/home/HomeProfile/HomeProfile.scss
+++ b/ui/src/views/home/HomeProfile/HomeProfile.scss
@@ -11,7 +11,7 @@
 	.cover {
 		width: 100%;
 		height: 250px;
-		background: url('@/assets/image/test/cover.jpg') no-repeat center;
+		background: no-repeat center;
 		background-size: 1000px 250px;
 	}
 
