--- a/ui/src/views/home/HomeProfile/HomeProfile.scss
+++ b/ui/src/views/home/HomeProfile/HomeProfile.scss
@@ -8,11 +8,18 @@
 	border-radius: 8px;
 	box-shadow: 0 2px 3px 0 $border-color;
 
-	.cover {
+	.cover-warp {
 		width: 100%;
 		height: 250px;
-		background: no-repeat center;
-		background-size: 1000px 250px;
+		overflow: hidden;
+		position: relative;
+		.cover {
+			position: absolute;
+			transform: translate(-50%);
+			left: 50%;
+			width: 1000px;
+			height: 100%;
+		}
 	}
 
 	.profile {
@@ -90,11 +97,17 @@
 		border: none;
 		border-radius: 0px;
 		border-bottom: 1px solid $border-color;
-		.cover {
-			height: 150px;
-			background-size: 710px 177px;
-			@media screen and (max-width: 500px) {
-				background-size: 500px 150px;
+		.cover-warp {
+			.cover {
+				width: 700px;
+			}
+		}
+		@media screen and (max-width: 500px) {
+			.cover-warp {
+				height: 125px;
+				.cover {
+					width: 500px;
+				}
 			}
 		}
 
