--- a/ui/src/assets/style/common.scss
+++ b/ui/src/assets/style/common.scss
@@ -10,10 +10,27 @@
 .bg-white {
   background-color: #fff;
 }
+.bg-blue {
+  background: #0070c52f;
+}
+
+.center {
+  margin: 0 auto;
+}
+
+.page {
+  background-color: #fff;
+  border: 1px solid #e6e6e6;
+  border-radius: 5px;
+  box-shadow: -1px 0 4px 0 #e6e6e6;
+}
 
 /* [border] START */
 .bdb{
   border-bottom: 1px solid #e6e6e6;
+}
+.page-padding{
+  padding: 20px;
 }
 .bd {
   border: 1px solid #e6e6e6;
@@ -48,6 +65,12 @@
 .w1200 {
   max-width: 1200px;
 }
+.w280{
+  width: 280px;
+}
+.w100 {
+  width: 100px;
+}
 /* [width] END */
 
 /* [height] START */
@@ -56,6 +79,12 @@
 }
 .h55 {
   height: 55px;
+}
+.h50 {
+  height: 40px
+}
+.h30 {
+  height: 30px;
 }
 /* [height] END */
 
@@ -157,11 +186,78 @@
 .mr13 {margin-right:13px}
 .mr15 {margin-right:15px}
 .mr20 {margin-right:20px}
+.mr25 {margin-right:25px}
 .mr30 {margin-right:30px}
 .mr40 {margin-right:40px}
 .mr50 {margin-right:50px}
 .mr100 {margin-right:100px}
 /* [margin] END */
+
+/* [padding] START */
+/*padding*/
+.p10 {padding:10px;}
+.p15 {padding:15px;}
+.p30 {padding:30px;}
+
+.pt0 {padding-top: 0;}
+.pt5 {padding-top:5px}
+.pt8 {padding-top:8px}
+.pt10 {padding-top:10px}
+.pt15 {padding-top:15px}
+.pt20 {padding-top:20px}
+.pt30 {padding-top:30px}
+.pt40 {padding-top:40px}
+.pt45 {padding-top:45px}
+.pt50 {padding-top:50px}
+.pt60 {padding-top:60px}
+
+.pb5 {padding-bottom:5px}
+.pb6 {padding-bottom:6px}
+.pb8 {padding-bottom:8px}
+.pb10 {padding-bottom:10px}
+.pb14 {padding-bottom:14px}
+.pb15 {padding-bottom:15px}
+.pb20 {padding-bottom:20px}
+.pb25 {padding-bottom:25px}
+.pb30 {padding-bottom:30px}
+.pb35 {padding-bottom:35px}
+.pb40 {padding-bottom:40px}
+.pb50 {padding-bottom:50px}
+.pb100 {padding-bottom:100px}
+.pb150 {padding-bottom:150px}
+
+.pl5 {padding-left:5px}
+.pl10 {padding-left:10px}
+.pl15 {padding-left:15px}
+.pl20 {padding-left:20px}
+.pl25 {padding-left:25px}
+.pl30 {padding-left:30px}
+.pl35 {padding-left:35px}
+.pl40 {padding-left:40px}
+.pl45 {padding-left:45px}
+.pl50 {padding-left:50px}
+.pl80 {padding-left:80px}
+.pl100 {padding-left:100px}
+
+.pr5 {padding-right:5px}
+.pr10 {padding-right:10px}
+.pr15 {padding-right:15px}
+.pr20 {padding-right:20px}
+.pr25 {padding-right:25px}
+.pr30 {padding-right:30px}
+.pr40 {padding-right:40px}
+.pr50 {padding-right:50px}
+.pr100 {padding-right:100px}
+/* [padding] END */
+
+.lh13 {line-height: 1.3;}
+.lh14 {line-height: 1.4;}
+.lh15 {line-height: 1.5;}
+.lh16 {line-height: 1.6;}
+.lh17 {line-height: 1.7;}
+.lh18 {line-height: 1.8;}
+.lh19 {line-height: 1.9;}
+.lh20 {line-height: 2;}
 
 .f14 {
   font-size: 14px;
