--- a/ui/src/assets/style/common.scss
+++ b/ui/src/assets/style/common.scss
@@ -2,18 +2,24 @@
   cursor: pointer;
   &:hover{
     opacity: 0.9;
+    transition: all 0.15s cubic-bezier(0.645, 0.045, 0.355, 1);
   }
 }
 .theme{
-  color: #0071c5;
+  color: #0089ff;
+}
+.black {
+  color: #121212;
 }
 .bg-white {
   background-color: #fff;
 }
 .bg-blue {
-  background: #0070c52f;
+  background: #0070c53f;
 }
-
+.blue {
+  color: #8590a6;
+}
 .center {
   margin: 0 auto;
 }
@@ -22,7 +28,7 @@
   background-color: #fff;
   border: 1px solid #e6e6e6;
   border-radius: 5px;
-  box-shadow: -1px 0 4px 0 #e6e6e6;
+  box-shadow: 0 0 5px 0 #e6e6e6
 }
 
 /* [border] START */
@@ -34,6 +40,9 @@
 }
 .bd {
   border: 1px solid #e6e6e6;
+}
+.bdradius {
+  border-radius: 4px;
 }
 /* [border] END */
 
@@ -65,12 +74,16 @@
 .w1200 {
   max-width: 1200px;
 }
-.w280{
-  width: 280px;
+.w1000{
+  max-width: 1000px;
+}
+.w260{
+  width: 260px;
 }
 .w100 {
   width: 100px;
 }
+
 /* [width] END */
 
 /* [height] START */
@@ -87,6 +100,14 @@
   height: 30px;
 }
 /* [height] END */
+
+.elipses {
+  letter-spacing: 0.5px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
+}
 
 /* [font-size] START */
 .f10 {font-size:12px; width: 120%; transform: scale(0.833); transform-origin: left top;}
