--- a/ui/src/assets/style/iconfont.scss
+++ b/ui/src/assets/style/iconfont.scss
@@ -5,7 +5,7 @@
 		url('//at.alicdn.com/t/font_2332256_yjdx8m3iku.ttf?t=1625558240309') format('truetype');
 }
 
-.iconfont {
+.iconfont, [iconfont] {
 	font-family: 'iconfont';
 	font-size: 16px;
 	font-style: normal;
