--- a/ui/src/assets/style/common.scss
+++ b/ui/src/assets/style/common.scss
@@ -1,52 +1,69 @@
 [button]{
   cursor: pointer;
+  transition: all 0.15s cubic-bezier(0.645, 0.045, 0.355, 1);
   &:hover{
-    opacity: 0.9;
-    transition: all 0.15s cubic-bezier(0.645, 0.045, 0.355, 1);
+    opacity: 0.82;
   }
 }
-.theme{
-  color: #0089ff;
+
+.pointer {
+  cursor: pointer;
 }
-.black {
-  color: #121212;
-}
-.bg-white {
-  background-color: #fff;
-}
-.bg-blue {
-  background: #0070c53f;
-}
-.blue {
-  color: #8590a6;
-}
+
 .center {
   margin: 0 auto;
 }
-
-.page {
-  background-color: #fff;
-  border: 1px solid #e6e6e6;
-  border-radius: 5px;
-  box-shadow: 0 0 5px 0 #e6e6e6
+.fcenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  letter-spacing: 0.5px;
+}
+.unselected {
+  -webkit-touch-callout:none;
+  -webkit-user-select:none;
+  user-select:none;
 }
 
-/* [border] START */
-.bdb{
-  border-bottom: 1px solid #e6e6e6;
+@each $colorName,$color in $color_list {
+  .#{$colorName} {
+    color: #{$color};
+  }
+  .bg-#{$colorName} {
+    background-color: #{$color};
+  }
+}
+
+@each $p, $pName in $position_list {
+  .bd#{$pName}{
+    @if $p == 'all' {
+      border: 1px solid $gray_3;
+    }
+    border-#{$p}:1px solid $gray_3;
+  }
+}
+
+@for $i from 12 to 30 {
+  .f#{$i} {font-size:#{$i}px;}
+}
+
+.page {
+  background-color: $white_1;
+  border: 1px solid $gray_3;
+  border-radius: 5px;
+  box-shadow: 0 0 3px 0 $gray_3;
 }
 .page-padding{
   padding: 20px;
 }
-.bd {
-  border: 1px solid #e6e6e6;
-}
-.bdradius {
-  border-radius: 4px;
-}
-/* [border] END */
 
-/* [flex] START */
 .flex {display: flex;}
 .flex-items-center {align-items: center;}
 .flex-items-start {align-items: flex-start;}
@@ -74,14 +91,23 @@
 .w1200 {
   max-width: 1200px;
 }
-.w1000{
-  max-width: 1000px;
+.w1024{
+  max-width: 1024px;
 }
-.w260{
-  width: 260px;
+.w280{
+  width: 280px;
 }
 .w100 {
   width: 100px;
+}
+.w160 {
+  width: 160px;
+}
+.w40 {
+  width: 40px;
+}
+.w60 {
+  width: 60px;
 }
 
 /* [width] END */
@@ -90,14 +116,29 @@
 .fit-height {
   height: 100%;
 }
+.h30 {
+  height: 30px;
+}
+.h50 {
+  height: 50px
+}
 .h55 {
   height: 55px;
 }
-.h50 {
-  height: 40px
+.h40 {
+  height: 40px;
 }
-.h30 {
-  height: 30px;
+.h60 {
+  height: 60px;
+}
+.h65 {
+  height: 65px;
+}
+.h100 {
+  height: 100px;
+}
+.h140 {
+  height: 140px;
 }
 /* [height] END */
 
@@ -108,31 +149,6 @@
   -webkit-line-clamp: 4;
   overflow: hidden;
 }
-
-/* [font-size] START */
-.f10 {font-size:12px; width: 120%; transform: scale(0.833); transform-origin: left top;}
-.f11 {font-size:12px; width: 110%; transform: scale(0.916); transform-origin: left top;}
-.f12 {font-size:12px;}
-.f13 {font-size:13px;}
-.f14 {font-size:14px;}
-.f15 {font-size:15px;}
-.f16 {font-size:16px;}
-.f18 {font-size:18px;}
-.f20 {font-size:20px;}
-.f22 {font-size:22px;}
-.f24 {font-size:24px;}
-.f25 {font-size:25px;}
-.f26 {font-size:26px;}
-.f28 {font-size:28px;}
-.f30 {font-size:30px;}
-.f32 {font-size:32px;}
-.f34 {font-size:34px;}
-.f36 {font-size:36px;}
-.f38 {font-size:38px;}
-.f40 {font-size:40px;}
-.f46 {font-size:46px;}
-.f60 {font-size:60px;}
-/* [font-size] END */
 
 /* [margin] START */
 .mt2 {margin-top:2px}
@@ -283,3 +299,10 @@
 .f14 {
   font-size: 14px;
 }
+
+.fw400 {font-weight: 400;}
+.fw500{font-weight: 500;}
+.blod{font-weight: 700;}
+.bloder{font-weight: 900;}
+.disc {-webkit-text-security:disc; text-security:disc;}
+.vam {vertical-align: middle;}
