--- a/ui/src/assets/style/iconfont.scss
+++ b/ui/src/assets/style/iconfont.scss
@@ -1,8 +1,8 @@
 @font-face {
 	font-family: 'iconfont';  /* Project id 2824017 */
-	src: url('//at.alicdn.com/t/font_2824017_or5expkqh6h.woff2?t=1632052787843') format('woff2'),
-		 url('//at.alicdn.com/t/font_2824017_or5expkqh6h.woff?t=1632052787843') format('woff'),
-		 url('//at.alicdn.com/t/font_2824017_or5expkqh6h.ttf?t=1632052787843') format('truetype');
+	src: url('//at.alicdn.com/t/font_2824017_xgwpp78xw7.woff2?t=1632071973715') format('woff2'),
+		 url('//at.alicdn.com/t/font_2824017_xgwpp78xw7.woff?t=1632071973715') format('woff'),
+		 url('//at.alicdn.com/t/font_2824017_xgwpp78xw7.ttf?t=1632071973715') format('truetype');
   }
 
 [iconfont]{
@@ -23,6 +23,7 @@
 }
 .icon_like {&::before{content: '\e644';}}
 .icon_liked {&::before{content: '\e6e3';}}
+.icon_arrow {&::before{content: '\e600'; margin-right: 5px;}}
 
 
 @mixin setIconColor($color) {
