--- a/ui/src/assets/style/common.scss
+++ b/ui/src/assets/style/common.scss
@@ -106,11 +106,20 @@
 .w160 {
   width: 160px;
 }
+.w200 {
+  width: 200px;
+}
 .w40 {
   width: 40px;
 }
 .w60 {
   width: 60px;
+}
+.w400{
+  width: 400px;
+}
+.w300 {
+  width: 300px;
 }
 
 /* [width] END */
@@ -127,6 +136,9 @@
 }
 .h55 {
   height: 55px;
+}
+.h35 {
+  height: 35px;
 }
 .h40 {
   height: 40px;
