--- a/ui/src/assets/style/common.scss
+++ b/ui/src/assets/style/common.scss
@@ -214,6 +214,7 @@
 
 .mb10 {margin-bottom:10px}
 .mb15 {margin-bottom:15px}
+.mb18 {margin-bottom:18px}
 .mb20 {margin-bottom:20px}
 .mb24 {margin-bottom:24px}
 .mb30 {margin-bottom:30px}
@@ -246,6 +247,7 @@
 .mr10 {margin-right:10px}
 .mr13 {margin-right:13px}
 .mr15 {margin-right:15px}
+.mr18 {margin-right:18px}
 .mr20 {margin-right:20px}
 .mr25 {margin-right:25px}
 .mr30 {margin-right:30px}
