--- a/ui/src/assets/style/theme.scss
+++ b/ui/src/assets/style/theme.scss
@@ -10,6 +10,7 @@ $gray_3:#dfdfdf;
 $gray_4: #f9f9fa;
 $blue_1: #8590a6;
 $blue_2: #6385a6;
+$red_1: #ff5d5d;
 
 $color_list:(
   theme_1:$theme_1,
@@ -22,7 +23,8 @@ $color_list:(
   black_3:$black_3,
   gray_4:$gray_4,
   blue_1:$blue_1,
-  blue_2:$blue_2
+  blue_2:$blue_2,
+  red_1:$red_1
 );
 
 $position_list:(
