--- a/ui/src/assets/style/reset.scss
+++ b/ui/src/assets/style/reset.scss
@@ -190,6 +190,8 @@ dt {
 	background: none;
 	outline: none;
 	box-sizing: border-box;
+	resize: none;
+	font-family: PingFangSC-Regular,"Microsoft YaHei","Open Sans",Arial,"Hiragino Sans GB","\5fae\8f6f\96c5\9ed1",STHeiti,"WenQuanYi Micro Hei",SimSun,sans-serif;
 }
 
 /**
