--- a/ui/src/assets/style/common.scss
+++ b/ui/src/assets/style/common.scss
@@ -68,6 +68,10 @@
   padding: 20px;
 }
 
+.rp {
+  position: relative;
+}
+
 .flex {display: flex;}
 .flex-items-center {align-items: center;}
 .flex-items-start {align-items: flex-start;}
